# sbomnix

./: .envrc  .gitignore  .gitlint  .travis.yml  Makefile  README.md  REUSE.toml  default.nix  flake.nix  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  sbomnix.nix  setup.py  shell.nix
.github/workflows/: check-commit-message.yaml  codeql.yml  dependency-review.yml  release_sbomnix.yml  scorecards.yml  test_sbomnix.yml
.reuse/: dep5
doc/: nix_outdated.md  nixgraph.md  nixmeta.md  nixpkgs_meta.md  provenance.md  replogoy_cli.md  repology_cli.md  sbomnix_metadata.md  vulnxscan.md  wget_b1.png.license
githooks/: check-commit.sh  check-commits.sh  install-git-hooks.sh
nix/: apps.nix  checks.nix  default.nix  devshell.nix  formatter.nix  git-hooks.nix  packages.nix  treefmt.nix
nixgraph/: __init__.py  graph.py  main.py
sbomnix/: __init__.py  cpe.py  derivation.py  main.py  nix.py  sbomdb.py  sbomnix.py  utils.py
scripts/: check-fast.sh  check-full.sh  default.nix  env.sh  help.sh  release-asset.sh  run-pytest-lane.sh  update-cpedict.sh
tests/: compare_deps.py  compare_sboms.py  conftest.py  test_artifacts.py  test_builder_meta.py  test_builder_runtime.py  test_buildtime_closure.py  test_cli_conventions.py  test_cli_error_boundaries.py  test_cli_smoke.py  test_common_log.py  test_common_versioning.py  test_compare_deps.py  test_components.py  test_cpe.py  test_dependency_index.py  test_derivation_hardening.py  test_dfcache.py  test_flakeref_resolution.py  test_http_cache.py  test_library_exceptions.py  test_meta_nix_lookup.py  test_nix_cli_argv.py  test_nix_outdated_pipeline.py  test_nix_target_resolution.py  test_nix_utils_parsing.py  test_nixgraph_graph.py  test_nixmeta_parsing.py  test_nixmeta_progress.py  test_nixmeta_source.py  test_nixmeta_source_export.py  test_osv_client.py  test_package_meta.py  test_provenance_batching.py  test_provenance_path_info.py  test_provenance_subjects.py  test_repology_adapter.py  test_repology_cve.py  test_repology_projects_parser.py  test_repology_sbom.py  (+18 more)
(+138 files in other folders)
